--- a/src/app/content-page/content-page.component.html
+++ b/src/app/content-page/content-page.component.html
@@ -8,20 +8,67 @@
         <img src="assets/traveler.png" alt="Travel" class="img-fluid">
     </div>
 
-    <div class="row mt-3">
-     <div class="col-md-6">
+    <!-- <div class="row mt-3">
+     <div class="col-md-4">
         <p>Testimonios</p>
         <p class="h2 main-color">Comentarios de otros viajeros</p>
      </div>
-     <div class="comentario col-md-6">
+     <div class="comentario col-md-7">
         <p>"Necesitaba cambiar las fechas de mi viaje, me comuniqué con Satena y fue fácil y rápido hacerlo. El mejor servicio al cliente que he usado"</p>
            <div>
               <p>Erick Padilla</p>
               <p>Medellín → Caracas</p>
            </div>
       </div>
-      
-      
+      <div class="col-md-1">
+      <i class="fa fa-check"></i>
+   </div>
+    </div> -->
+
+    <div class="d-flex justify-content-center">
+      <div>
+         <p>Testimonios</p>
+         <p class="h2 main-color">Comentarios de otros viajeros</p>
+      </div>
+      <div class="comentario">
+         <p>"Necesitaba cambiar las fechas de mi viaje, 
+            me comuniqué con Satena y fue fácil y rápido hacerlo. 
+            El mejor servicio al cliente que he usado"
+         </p>
+            <div>
+                  @if(!status) {
+                  <p>Erick Padilla</p>
+                  <p>Medellín → Caracas</p>
+                  } @else {
+                     <p>Andrés Guzman</p>
+                     <p>Bogotá → Nuquí</p>
+                  }
+            </div>
+       </div>
+       <div>
+       <a type="button" (click)="changeDescription()"><i class="fa fa-angle-up"></i></a>
+       <a type="button" (click)="changeDescription()"><i class="fa fa-angle-down"></i></a>
+    </div>
+     </div>
+
+    <div class="d-flex justify-content-center mt-5">
+      <div>
+         <p class="text-center" style="font-weight: bold;">Mas vendidos</p>
+           <p class="h2 main-color">Comentarios de otros viajeros</p>
+      </div>
+    </div>
+    <div class="d-flex justify-content-between p-5">
+      @for (item of destinos; track item.id) {
+         <div class="card" style="width: 18rem;">
+            <img src={{item.img}} class="card-img-top" alt="travels">
+            <div class="card-body">
+              <h5 class="card-title">{{item.nombre}}</h5>
+              <p class="card-text">${{item.precio}}</p>
+              <p class="card-text"><small class="text-muted">5 nov - 13 dic</small></p>
+            </div>
+          </div>
+      }
+    </div>
  
 </div>
 
