--- a/src/app/page-top/page-top.component.html
+++ b/src/app/page-top/page-top.component.html
@@ -10,11 +10,16 @@
         <li class="nav-item"><a href="#" class="nav-link">Check-in</a></li>
         <li class="nav-item"> <a href="#" class="nav-link">Iniciar sesión</a></li>
         <li class="nav-item"><button class="btn btn-outline-dark">Registrarse</button></li>
-        <li class="nav-item"><label class="switch">
-            <input type="checkbox">
-            <span class="slider round"></span>
-          </label></li>
-        <li class="nav-item"><i class="fa fa-check"></i></li>
+        <li class="nav-item">
+          <div class="d-flex justify-content-between">
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider round"></span>
+            </label>
+            <i class="fa fa-moon-o"></i>
+          </div>
+  
+        </li>
       </ul>
     </nav>
     <!-- <div class="d-flex">
