--- a/src/app/content-page/content-page.component.css
+++ b/src/app/content-page/content-page.component.css
@@ -1,4 +1,3 @@
-
 .h1 {
   font-size: 5em;
   margin-top: 0;
@@ -6,12 +5,13 @@
 }
 
 .h2 {
-    font-size: 3em;
-    margin-top: 0;
-    font-weight: bold;
+  font-size: 3em;
+  margin-top: 0;
+  font-weight: bold;
 }
-.main-color{
-    color: #181E4B;
+
+.main-color {
+  color: #181E4B;
 }
 
 a {
@@ -29,23 +29,38 @@ img {
   max-width: 100%;
   height: auto;
 }
-.comentario {
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 20px;
-    margin-bottom: 20px;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-  }
-  
-  .comentario p {
-   font-size:18px;
-  }
-  
-  .img-travel {
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-color: rgb(24, 192, 192) !important;
-    border-radius: 15px 15px 1px 1px !important;
-  }
 
-  
+.img-traveler {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  border-radius: 50%;
+
+}
+
+.comentario {
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  width: 75%;
+}
+
+.comentario p {
+  font-size: 18px;
+}
+
+.prb {
+  position: absolute;
+  left: 50px;
+  bottom: -120px;
+  right: 10px;
+  opacity: 0.5;
+}
+
+.img-travel {
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-color: rgb(24, 192, 192) !important;
+  border-radius: 15px 15px 1px 1px !important;
+}
