--- a/src/app/content-page/content-page.component.html
+++ b/src/app/content-page/content-page.component.html
@@ -1,75 +1,93 @@
-<div class="p-4">
-    <div class="d-flex">
-    <div class="mt-5">
-        <p class="h1 main-color mb-4">Vuelve a volar en cielos claros y sin turbulencias</p>
-        <p class="main-color mb-4" style="font-weight: bold;">CONOCE MÁS SOBRE NUESTRAS POLÍTICAS PENSADAS PARA TI</p>
-        <button type="button" class="btn btn-warning text-white" style="font-weight: normal;">Conoce más aquí</button>
-    </div>
-        <img src="assets/traveler.png" alt="Travel" class="img-fluid">
-    </div>
-
-    <!-- <div class="row mt-3">
-     <div class="col-md-4">
-        <p>Testimonios</p>
-        <p class="h2 main-color">Comentarios de otros viajeros</p>
-     </div>
-     <div class="comentario col-md-7">
-        <p>"Necesitaba cambiar las fechas de mi viaje, me comuniqué con Satena y fue fácil y rápido hacerlo. El mejor servicio al cliente que he usado"</p>
-           <div>
-              <p>Erick Padilla</p>
-              <p>Medellín → Caracas</p>
-           </div>
+<div class style="padding: 50px;">
+   <div class="d-flex">
+      <div class="mt-5">
+         <p class="h1 main-color mb-4">Vuelve a volar en cielos claros y sin
+            turbulencias</p>
+         <p class="main-color mb-4" style="font-weight: bold;">CONOCE MÁS SOBRE
+            NUESTRAS POLÍTICAS PENSADAS PARA TI</p>
+         <button type="button" class="btn btn-warning text-white"
+            style="font-weight: normal;">Conoce más aquí</button>
       </div>
-      <div class="col-md-1">
-      <i class="fa fa-check"></i>
+      <img src="assets/traveler.png" alt="Travel" class="img-fluid">
    </div>
-    </div> -->
 
-    <div class="d-flex justify-content-center">
+   <div class="d-flex justify-content-center">
       <div>
-         <p>Testimonios</p>
+         <p class="fw-bold text-muted">Testimonios</p>
          <p class="h2 main-color">Comentarios de otros viajeros</p>
       </div>
-      <div class="comentario">
-         <p>"Necesitaba cambiar las fechas de mi viaje, 
-            me comuniqué con Satena y fue fácil y rápido hacerlo. 
-            El mejor servicio al cliente que he usado"
-         </p>
+      <div class="position-relative">
+         @if(!status) {
+            <img class="img-traveler" src="assets/persona.png" width="80px" />
+         } @else {
+            <img class="img-traveler" src="assets/persona2.jpg" width="80px" style="height: 80px;"/>
+         }
+         
+         <div class="comentario m-5" style="background-color: #ffff;">
+            <p>"Necesitaba cambiar las fechas de mi viaje,
+               me comuniqué con Satena y fue fácil y rápido hacerlo.
+               El mejor servicio al cliente que he usado"
+            </p>
             <div>
-                  @if(!status) {
-                  <p>Erick Padilla</p>
-                  <p>Medellín → Caracas</p>
-                  } @else {
-                     <p>Andrés Guzman</p>
-                     <p>Bogotá → Nuquí</p>
-                  }
+               @if(!status) {
+               <p>Erick Padilla</p>
+               <p>Medellín → Caracas</p>
+               } @else {
+               <p>Andrés Guzman</p>
+               <p>Bogotá → Nuquí</p>
+               }
             </div>
-       </div>
-       <div>
-       <a type="button" (click)="changeDescription()"><i class="fa fa-angle-up"></i></a>
-       <a type="button" (click)="changeDescription()"><i class="fa fa-angle-down"></i></a>
-    </div>
-     </div>
+         </div>
+         <div class="comentario my-5 ms-5 prb" style="z-index: -2;">
+            <p>"Necesitaba cambiar las fechas de mi viaje,
+               me comuniqué con Satena y fue fácil y rápido hacerlo.
+               El mejor servicio al cliente que he usado"
+            </p>
+            <div class="mt-5">
+               @if(status) {
+               <p>Erick Padilla</p>
+               <p>Medellín → Caracas</p>
+               } @else {
 
-    <div class="d-flex justify-content-center mt-5">
+               <p>Andrés Guzman</p>
+               <p>Bogotá → Nuquí</p>
+               }
+            </div>
+         </div>
+      </div>
+      <div class="d-flex flex-column justify-content-center">
+         <a type="button" (click)="changeDescription()"><i
+               class="fa fa-angle-up"></i></a>
+         <a type="button" (click)="changeDescription()" class="mt-4"><i
+               class="fa fa-angle-down"></i></a>
+      </div>
+   </div>
+
+   <div class="d-flex justify-content-center" style="margin-top: 120px;">
       <div>
          <p class="text-center" style="font-weight: bold;">Mas vendidos</p>
-           <p class="h2 main-color">Comentarios de otros viajeros</p>
+         <p class="h2 main-color">Comentarios de otros viajeros</p>
       </div>
-    </div>
-    <div class="d-flex justify-content-between p-5">
+   </div>
+   <div class="d-flex justify-content-between p-5">
       @for (item of destinos; track item.id) {
-         <div class="card" style="width: 18rem;">
-            <img src={{item.img}} class="card-img-top" alt="travels">
-            <div class="card-body">
-              <h5 class="card-title">{{item.nombre}}</h5>
-              <p class="card-text">${{item.precio}}</p>
-              <p class="card-text"><small class="text-muted">5 nov - 13 dic</small></p>
-            </div>
-          </div>
+      <div class="card" style="width: 18rem;">
+         <img src={{item.img}} class="card-img-top" alt="travels">
+         <div class="card-body">
+            <h5 class="card-title">{{item.nombre}}</h5>
+            <p class="card-text">${{item.precio}}</p>
+            <p class="card-text"><small class="text-muted">5 nov - 13
+                  dic</small></p>
+         </div>
+      </div>
       }
-    </div>
- 
+   </div>
+
+   <div>
+      <div class="text-center">
+         <p class="text-center text-muted" style="font-weight: bold;">Vuelos</p>
+         <p class="h2 main-color">Comentarios de otros viajeros</p>
+      </div>
+   </div>
+
 </div>
-
-
