--- a/src/app/page-top/page-top.component.html
+++ b/src/app/page-top/page-top.component.html
@@ -1,28 +1,29 @@
 <!-- page-top.component.html -->
 <header class="d-flex align-items-center justify-content-between page-top">
-    <div class="logo">
-      <img src="assets/logo.png" alt="Logo de Quind">
-    </div>
-    <nav class="menu mt-4">
-      <ul class="align-items-center justify-content-center d-flex">
-        <li class="nav-item"><a href="#" class="nav-link">Destinos</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Vuelos</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Check-in</a></li>
-        <li class="nav-item"> <a href="#" class="nav-link">Iniciar sesión</a></li>
-        <li class="nav-item"><button class="btn btn-outline-dark">Registrarse</button></li>
-        <li class="nav-item">
-          <div class="d-flex justify-content-between">
-            <label class="switch">
-              <input type="checkbox">
-              <span class="slider round"></span>
-            </label>
-            <i class="fa fa-moon-o"></i>
-          </div>
-  
-        </li>
-      </ul>
-    </nav>
-    <!-- <div class="d-flex">
+  <div class="logo">
+    <img src="assets/Logo.png" alt="Logo de Quind">
+  </div>
+  <nav class="menu mt-4">
+    <ul class="align-items-center justify-content-center d-flex">
+      <li class="nav-item"><a href="#" class="nav-link">Destinos</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Vuelos</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Check-in</a></li>
+      <li class="nav-item"> <a href="#" class="nav-link">Iniciar sesión</a></li>
+      <li class="nav-item"><button
+          class="btn btn-outline-dark">Registrarse</button></li>
+      <li class="nav-item">
+        <div class="d-flex justify-content-between">
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+          <i class="fa fa-moon-o"></i>
+        </div>
+
+      </li>
+    </ul>
+  </nav>
+  <!-- <div class="d-flex">
       <a href="#" class="nav-link">Iniciar sesión</a>
       <span class="separator">|</span>
       <button class="btn btn-outline-dark">Registrarse</button>
@@ -32,7 +33,4 @@
       </label>
       <i class="fas fa-moon"></i>
     </div> -->
-  </header>
-  
-  
-  
+</header>
