Ajustes del contenido y del responsive, modo oscuro

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,3 +4,10 @@ right: 0px;
 top: 0px;
 z-index: -1;
 }
+
+.dark-mode {
+    background-color: #181E4B;
+    color: #fff;
+    /* Otros estilos específicos para el modo oscuro */
+  }
+  
