--- a/src/app/page-top/page-top.component.html
+++ b/src/app/page-top/page-top.component.html
@@ -1,36 +1,31 @@
-<!-- page-top.component.html -->
-<header class="d-flex align-items-center justify-content-between page-top">
-  <div class="logo">
-    <img src="assets/Logo.png" alt="Logo de Quind">
-  </div>
-  <nav class="menu mt-4">
-    <ul class="align-items-center justify-content-center d-flex">
-      <li class="nav-item"><a href="#" class="nav-link">Destinos</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">Vuelos</a></li>
-      <li class="nav-item"><a href="#" class="nav-link">Check-in</a></li>
-      <li class="nav-item"> <a href="#" class="nav-link">Iniciar sesión</a></li>
-      <li class="nav-item"><button
-          class="btn btn-outline-dark">Registrarse</button></li>
-      <li class="nav-item">
-        <div class="d-flex justify-content-between">
-          <label class="switch">
-            <input type="checkbox">
-            <span class="slider round"></span>
-          </label>
-          <i class="fa fa-moon-o"></i>
-        </div>
 
+<header class="page-top">
+  <nav class="menu mt-4 w-100">
+    <ul class="align-items-center justify-content-between d-flex ps-0">
+      <li class="nav-item">
+        <div class="logo">
+          <img class="d-none d-lg-flex" src="assets/Logo.png"
+            alt="Logo de Quind">
+          <img class="d-flex d-lg-none" src="assets/logo-min.png" alt="Logo">
+        </div></li>
+      <li class="nav-item"><a href="#" [class]="darkMode ? 'nav-link text-white' : 'nav-link'">Destinos</a></li>
+      <li class="nav-item"><a href="#" [class]="darkMode ? 'nav-link text-white' : 'nav-link'">Vuelos</a></li>
+      <li class="nav-item"><a href="#" [class]="darkMode ? 'nav-link text-white' : 'nav-link'">Check-in</a></li>
+      <li class="nav-item"><a href="#" [class]="darkMode ? 'nav-link text-white' : 'nav-link'">Iniciar
+          sesión</a></li>
+      <li class="nav-item"><button
+        [class]="darkMode ? 'btn btn-light' : 'btn btn-outline-dark'">Registrarse</button></li>
+      <li class="nav-item">
+        <div class="d-flex justify-content-between align-items-center">
+          <i class="fa fa-sun-o"></i>
+          <div class="form-check form-switch ms-2">
+            <input class="form-check-input" type="checkbox"
+              id="flexSwitchCheckDefault"
+              (click)="dark(!darkMode)" style="width: 40px;  height: 20px;">
+          </div>
+          <i class="fa fa-moon-o ms-2"></i>
+        </div>
       </li>
     </ul>
   </nav>
-  <!-- <div class="d-flex">
-      <a href="#" class="nav-link">Iniciar sesión</a>
-      <span class="separator">|</span>
-      <button class="btn btn-outline-dark">Registrarse</button>
-      <label class="switch">
-        <input type="checkbox">
-        <span class="slider round"></span>
-      </label>
-      <i class="fas fa-moon"></i>
-    </div> -->
 </header>
