--- a/src/app/content-page/content-page.component.css
+++ b/src/app/content-page/content-page.component.css
@@ -19,11 +19,6 @@ a {
   color: #000;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-}
-
 .img-fluid {
   display: block;
   max-width: 100%;
@@ -58,9 +53,12 @@ img {
   opacity: 0.5;
 }
 
-.img-travel {
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-color: rgb(24, 192, 192) !important;
-  border-radius: 15px 15px 1px 1px !important;
+@media screen and (max-width: 834px) {
+  .img-fluid {
+    width: 100%;
+  }
+
+  .h1 {
+    font-size: 3em;
+  }
 }
