--- a/src/app/page-top/page-top.component.css
+++ b/src/app/page-top/page-top.component.css
@@ -11,11 +11,11 @@
   .menu ul {
     list-style: none;
     display: flex;
-    gap: 40px;
+    
   }
 
   .menu li {
-    margin-right: 50px; /* Espacio entre los elementos del menú */
+    margin: 0px 5px 0px 5px; /* Espacio entre los elementos del menú */
   }
   
   .menu a {
@@ -32,54 +32,5 @@
   .separator {
     margin: 0 10px;
     color: #ccc;
-  }
-  
-  .switch {
-    position: relative;
-    display: inline-block;
-    width: 40px;
-    height: 20px;
-  }
-  
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    transition: 0.4s;
-    border-radius: 34px;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 16px;
-    width: 16px;
-    left: 2px;
-    bottom: 2px;
-    background-color: white;
-    transition: 0.4s;
-    border-radius: 50%;
-  }
-  
-  input:checked + .slider {
-    background-color: #007bff;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #007bff;
-  }
-  
-  input:checked + .slider:before {
-    transform: translateX(20px);
   }
   
